--- a/web/css/main.css
+++ b/web/css/main.css
@@ -389,6 +389,62 @@ margin-bottom: 5px;
 	margin-top: 5px;
 }
 
+/* Sandbox Calendar Styles ====================================== */
+
+
+.a-calendar th.day
+{
+	color: #000;
+	background: rgba(255,255,255,0.25);
+}
+
+.a-calendar .day a,
+.a-calendar .day span
+{
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	border-radius: 2px;
+}
+
+.a-calendar .day.today a,
+.a-calendar .day.today span	
+{
+	border: 1px solid #999;
+}
+
+.a-calendar .day.selected a
+{
+	color: #333;
+	background: rgba(255,255,255,0.25);
+}
+
+.a-calendar .day a:hover
+{
+	text-decoration: none;
+	background: #000;
+	color: #fff;
+}
+
+.a-calendar .day.not-current-month
+{
+	opacity: 0.35;
+}
+
+.a-calendar .a-calendar-today:hover
+{
+	background-color: #999;
+}
+
+.a-calendar .a-calendar-today
+{
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	border-radius: 2px;
+	background-color: #ccc;	
+}
+
+
+
 /* Blog Templates ====================================== */
 
 .post.singleColumnTemplate .a-blog-item-meta
