I changed some ID's to Classes in layout.php in Apostrophe, main.css has been updated to reflect those changes
git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/trunk@2141 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -64,13 +64,13 @@ a:hover { text-decoration: underline; }
 /* Global Layout
 -------------------------------------*/
 
-#a-wrapper
+.a-wrapper
 {
 width: 960px;
 margin: 0 auto;
 }
 
-#a-header
+.a-header
 {
 float: left;
 display: inline;
@@ -79,7 +79,7 @@ width: 540px;
 clear: none;
 }
 
-#a-content
+.a-content
 {
 	float: left;
 	position: relative;
