Moved some button variant CSS to main.css because we have the slideshow variant css here too.
Like slideshow variants, the button variant is a nice example for how to take advantage of this functionality, but we don't need to include it in the plugin, just the sandbox.

We often override these styles to suit our needs anyway and it makes sense to have them in this location.




git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/trunk@2156 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -411,11 +411,8 @@ margin-bottom: 5px;
 
 
 
-/* 4. Variants
+/* ASANDBOX aSlideshow Compact Variant 
 -------------------------------------*/
-
-
-/* aSlideshow Compact Variant */
 
 .a-slot.aSlideshow.compact
 {
@@ -483,8 +480,9 @@ background-position: 0 -30px !important;
 }
 
 
-/* aSlideshow Autoplay Variant */
 
+/* ASANDBOX aSlideshow Autoplay Variant 
+------------------------------------------- */
 
 .a-slot.aSlideshow.autoplay .a-slideshow-title
 {
@@ -508,7 +506,40 @@ background-position: 0 -30px !important;
 text-transform: capitalize;
 }
 
-/* Staging - Do Not Edit Message */
+
+
+/* ASANDBOX aButton Title Over Image Variant 
+------------------------------------------- */
+
+.a-slot.aButton.useTitleAsButtonText .a-button .a-button-title
+{ 
+position: absolute;
+top: 0;
+left: 0;
+top: 50%;
+left: 0;
+line-height: 20px;
+margin-top: -10px;
+}
+
+.a-slot.aButton.useTitleAsButtonText .a-button .a-button-title a,
+.a-slot.aButton.useTitleAsButtonText .a-button .a-button-title a:hover
+{ 
+position: absolute;
+float: left;
+text-align: center;
+text-decoration: none;
+width: 100%;
+height: 100%;
+font-size: 16px;
+color: #fff;
+white-space: nowrap;
+text-shadow: 0 0 6px rgba(0,0,0,0.80);
+}
+
+
+/* ASANDBOX Staging - Do Not Edit Message
+------------------------------------------- */
 
 .a-do-not-edit {
 background: #f22;
