--- a/web/css/main.css
+++ b/web/css/main.css
@@ -240,8 +240,20 @@ width: 480px;
 
 .a-subnav-wrapper
 {
-	background: #ddd;
-	margin-bottom: 20px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 4px;	
+	background-color: #EFEFEF;
+	border: 1px solid #CCCCCC;
+	margin: 0 40px 20px -1px;
+	overflow: auto;
+	width: 198px;
+}
+
+.a-subnav-inner
+{
+	width: 178px;
+	padding: 9px;
 }
 
 .a-nav-subnav
@@ -284,7 +296,7 @@ margin-bottom: 5px;
 	float: left;
 	display: inline;
 	clear: both;
-	color: #fff;
+	color: #222;
 	width: 155px;
 	height: 100%;
 	padding: 0 20px 0 5px;
