removed border on blog admin subnav
git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/trunk@2175 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -338,6 +338,11 @@ margin-bottom: 5px;
 	padding: 0 5px;
 }
 
+.a-admin.a-blog-admin .a-subnav-wrapper
+{
+	border: none;
+}
+
 
 /* Breadcrumb Navigation
 -------------------------------------*/
