--- a/web/css/main.css
+++ b/web/css/main.css
@@ -194,11 +194,11 @@ width: 480px;
 	clear: both;
 	margin: 20px 0;
 	padding: 0;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;
-	border-radius: 4px;	
 	background-color: #EFEFEF;
 	border: 1px solid #DDDDDD;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 4px;
 	-moz-box-shadow: 0 0 6px rgba(0, 0, 0, 0.10);
 	-webkit-box-shadow: 0 0 6px rgba(0, 0, 0, 0.10);
 	box-shadow: 0 0 6px rgba(0, 0, 0, 0.10);
@@ -209,8 +209,8 @@ width: 480px;
 	float: left;
 	display: inline;
 	width: 118px;
-	height: 20px;
-	line-height: 20px;
+	height: 22px;
+	line-height: 22px;
 	border-right: 1px solid #ddd;
 	border-left: 1px solid #fcfcfc;
 	border-bottom: 0;
@@ -220,12 +220,24 @@ width: 480px;
 .a-nav-main .a-nav-item.first
 {
 	border-left: 0;
+	border-bottom-left-radius: 4px; 	
+	-moz-border-radius-bottomleft: 4px; 	
+	-webkit-border-bottom-left-radius: 4px;
+	border-top-left-radius: 4px; 	
+	-moz-border-radius-topleft: 4px; 	
+	-webkit-border-top-left-radius: 4px;
 }
 
 
 .a-nav-main .a-nav-item.last
 {
 	border-right: 0;
+	border-top-right-radius: 4px;
+	-moz-border-radius-topright: 4px;	
+	-webkit-border-top-right-radius: 4px;
+	border-bottom-right-radius: 4px; 	
+	-moz-border-radius-bottomright: 4px; 	
+	-webkit-border-bottom-right-radius: 4px;
 }
 
 .a-nav-main .a-nav-item a
@@ -240,8 +252,7 @@ width: 480px;
 	text-align: center;	
 }
 
-.a-nav-main .a-nav-item.a-current-page a,
-.a-nav-main .a-nav-item a:hover
+.a-nav-main .a-nav-item.a-current-page a
 {
 	background-color: #ddd;
 	color:#000;
