re-ordered externals for plugins so apostrophe pulls down first
git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/branches/1.4@2261 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -283,6 +283,7 @@ margin-bottom: 5px;
 /* Basic Blog Styles ====================================== */
 
 #a-blog-main,
+.a-blog-heading,
 .a-blog-item,
 .a-blog-item-title,
 .a-blog-item-meta,
@@ -306,6 +307,19 @@ margin-bottom: 5px;
 	height: 1px;
 	border: none;
 	background: rgba(0,0,0,0.125);
+}
+
+.a-blog-heading h3
+{
+	line-height: 20px;
+	float: left;
+	margin-right: 10px;
+}
+
+.a-blog-heading .a-controls
+{
+	float: left;
+	clear: none;
 }
 
 .a-blog-item .a-area
