--- a/web/css/main.css
+++ b/web/css/main.css
@@ -552,17 +552,8 @@ background-position: 0 -30px !important;
 	line-height: 1.3;
 	background: rgb(0,0,0);	
 	background: rgba(0, 0, 0, 0.35);	
+
 }
-
-.a-btn,
-.a-form-row label,
-.a-admin fieldset h2
-{
-text-transform: capitalize;
-}
-
-
-
 /* ASANDBOX aButton Title Over Image Variant 
 ------------------------------------------- */
 
@@ -611,6 +602,53 @@ text-shadow: 0 0 6px rgba(0,0,0,0.80);
 .a-search-results-count { margin: 10px 0; }
 .result-title { font-size: 14px; margin-bottom: 5px; }
 .result-url { font-size: 11px; margin-top: 5px; margin-bottom: 15px; color: #666; }
+
+
+/* ASANDBOX Signin Form  http://tld/login
+-------------------------------------*/
+
+.sfguard-signin .a-content { width: 100%; }
+
+.a-signin.page { 
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 4px;	
+	background-color: #EFEFEF;
+	border: 1px solid #DDDDDD;
+	-moz-box-shadow: 0 0 6px rgba(0, 0, 0, 0.10);
+	-webkit-box-shadow: 0 0 6px rgba(0, 0, 0, 0.10);
+	box-shadow: 0 0 6px rgba(0, 0, 0, 0.10);
+}
+
+.a-signin
+{
+float: left;
+position: relative;
+display: block;
+clear: both;
+margin: 20px auto;
+}
+
+.a-signin form
+{
+}
+ 
+.a-signin label
+{
+	display: block;
+	float: none;
+	font-size: 16px;
+	width: auto;
+	margin-bottom: 2px;
+}
+
+.a-signin .a-form-row input[type="text"],
+.a-signin .a-form-row input[type="password"] { width: 175px; padding: 4px; }
+
+.a-signin .a-form-row {	float: none; width: auto; clear: both; overflow: hidden; display: block; margin: 20px 20px -10px; }
+
+.a-signin .a-form-row.submit { margin: 30px 20px 20px; }
+
 
 
 /* ASANDBOX Staging - Do Not Edit Message
