--- a/web/css/main.css
+++ b/web/css/main.css
@@ -520,14 +520,15 @@ background-position: 0 -30px !important;
 .a-slot.aSlideshow.compact .a-slideshow-title
 {
 	position: absolute;
-	bottom: 0;
+	top: auto;
 	left: 0;
-	width: 100%;
-	margin: 0;
+	right: 0;
+	bottom: 0;
 	color: #fff;
 	font-size: 11px;
-	line-height: 1.3;
-	background: rgba(0,0,0,0.35);	
+	background: rgba(0,0,0,0.35);
+	width: auto;
+	float: none;
 }
 
 .a-slot.aSlideshow.compact .a-slideshow-title span
