cleaned CSS some more
git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/trunk@2513 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -4,27 +4,12 @@
 -------------------------------------------------------------------------- */
 
 * { margin: 0; padding: 0; font-weight: normal; } /* Safari seems to ignore a lot of the reset style sheet and I am not sure why. */
-
-html, body, div, span, applet, object, iframe, 
-h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, 
-abbr, acronym, address, big, cite, code, del, dfn, 
-em, font, img, ins, kbd, q, s, samp, small, strike, 
-strong, sub, sup, tt, var, b, u, i, center, 
-dl, dt, dd, ol, ul, li, fieldset, form, label, 
-legend, table, caption, tbody, tfoot, thead, tr, th, td 
-{ 
-	margin: 0; padding: 0; border: 0; outline: 0; font-weight: inherit; font-style: inherit; font-size: 100%; font-family: inherit; vertical-align: baseline; 
-}
-
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td { margin: 0; padding: 0; border: 0; outline: 0; font-weight: inherit; font-style: inherit; font-size: 100%; font-family: inherit; vertical-align: baseline; }
 :focus { outline: 0; } /* remember to define focus styles! */
-
 ins { text-decoration: none; } /* remember to highlight inserts somehow! */
 del { text-decoration: line-through; }
-
 table { border-collapse: separate; border-spacing: 0; } /* tables still need 'cellspacing="0"' in the markup */
-
 blockquote:before, blockquote:after, q:before, q:after { content: ""; }
-
 blockquote, q { quotes: "" ""; }
 
 /* Basic Elements
@@ -64,105 +49,29 @@ a:hover { text-decoration: underline; }
 /* Global Layout
 -------------------------------------*/
 
-.a-wrapper
-{
-width: 960px;
-margin: 0 auto;
-}
+.a-wrapper { width: 960px; margin: 0 auto; }
 
-.a-header
-{
-float: left;
-display: inline;
-position: relative;
-width: 540px;
-margin: 20px 0;
-clear: none;
-}
+.a-header { float: left; display: inline; position: relative; width: 540px; margin: 20px 0; clear: none; }
 
-.a-content
-{
-	float: left;
-	position: relative;
-	display: inline;
-	clear: none;
-	width: 720px;
-}
+.a-content { float: left; position: relative; display: inline; clear: none; width: 720px; }
 
-.a-area-footer
-{
-	position: relative;
-	display: inline;
-	clear: both;
-}
-
-.a-search.global
-{
-	width: auto;
-	clear: none;
-	float: right;
-	margin: 20px 0;
-}
-
+.a-search.global { width: auto; clear: none; float: right; margin: 20px 0; }
 .a-search.global form { border: 1px solid #ccc; border: 1px solid rgba(0,0,0,0.1);}
 
-.a-area-logo
-{
-	float: left;
-	display: inline;
-	position: relative;
-	width: 100%;
-	clear: both;
-}
+.a-area-logo { float: left; display: inline; position: relative; width: 100%; clear: both; }
+.a-area-logo .a-slot { margin: 0; }
+.a-area-logo .aImage a { float: left; display: inline; position: relative; }
 
-.a-area-logo .a-slot
-{
-	margin: 0;
-}
+.a-area-header { float: left; width: 50%; }
 
-.a-area-logo .aImage a
-{
-	float: left;
-	display: inline;
-	position: relative;
-}
+.a-area-body { width:480px; float:left; }
 
-.a-area-header
-{
-	float: left;
-	width: 50%;
-}
+.a-area-sidebar { width:200px; float:left; display:inline; position:relative; margin-left: 40px; }
 
-.a-area-body
-{
-	width:480px;
-	float:left;
-}
-
-.a-area-sidebar
-{
-	width:200px;
-	float:left;
-	display:inline;
-	position:relative;
-	margin-left: 40px;
-}
-
-.a-area-footer
-{
-	border-top: 1px solid #ddd;
-	padding-top: 10px;
-	margin-top: 20px;
-	font-size: 11px;
-	color: #999;
-}
+.a-area-footer { position: relative; display: inline; clear: both; border-top: 1px solid #ddd; padding-top: 10px; margin-top: 20px; font-size: 11px; color: #999; }
 
 .a-blog-posts .a-content,
-.a-blog-events .a-content
-{
-	clear: none;
-	width: 720px;
-}
+.a-blog-events .a-content { clear: none; width: 720px; }
 
 
 /* Top Navigation
@@ -234,131 +143,46 @@ clear: none;
 	text-align: center;	
 }
 
-.a-nav-main .a-nav-item.a-current-page a
-{
-	background-color: #ddd;
-	color:#000;
-}
+.a-nav-main .a-nav-item.a-current-page a { background-color: #ddd; color:#000; }
 
 
 /* Subnavigation
 -------------------------------------*/
-
-.a-subnav-wrapper
-{
+.a-subnav-wrapper {
 	margin: 0 40px 20px -1px;
 	overflow: auto;
 	width: 198px;
+	background-color: #EFEFEF;
+	border: 1px solid #DDDDDD;
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
 	border-radius: 4px;	
-	background-color: #EFEFEF;
-	border: 1px solid #DDDDDD;
 	-moz-box-shadow: 0 0 6px rgba(0, 0, 0, 0.10);
 	-webkit-box-shadow: 0 0 6px rgba(0, 0, 0, 0.10);
 	box-shadow: 0 0 6px rgba(0, 0, 0, 0.10);
 }
 
-.a-subnav-inner
-{
-	width: 180px;
-	padding: 9px;
-}
+.a-subnav-inner { width: 180px; padding: 9px; }
 
-.a-nav-subnav
-{
-	overflow: hidden;
-	list-style: none;
-	padding: 0;
-	margin: 0;
-}
+.a-nav-subnav { overflow: hidden; list-style: none; padding: 0; margin: 0; }
+.a-nav-subnav .a-nav-item { float: left; width: 100%; clear: both; position: relative; line-height: 20px; margin-bottom: 5px; }
+.a-nav-subnav .a-nav-item.last { 	margin-bottom: 0; }
+.a-nav-subnav .a-nav-item a { float: left; display: inline; clear: both; color: #222; width: 155px; height: 100%; padding: 0 20px 0 5px; }
+.a-nav-subnav .a-nav-item a:hover { color: #333; background: #fff; text-decoration: none; }
 
-.a-nav-subnav .a-nav-item
-{
-float: left;
-width: 100%;
-clear: both;
-position: relative;
-line-height: 20px;
-margin-bottom: 5px;
-}
+.a-subnav-wrapper.blog h4 { float: left; width: 100%; display: inline; position: relative; font-size: 14px; }
+.a-subnav-wrapper.blog .a-blog-filter-options { float: left; width: 100%; clear: both; display: inline; position: relative; line-height: 20px; }
+.a-subnav-wrapper.blog .a-blog-filter-options a,
+.a-subnav-wrapper.media .a-media-filter-options a { float: left; clear: both; display: inline; width: auto; padding: 0 5px; }
 
-.a-nav-subnav .a-nav-item.last
-{
-	margin-bottom: 0;
-}
-
-.a-nav-subnav .a-nav-item a
-{
-	float: left;
-	display: inline;
-	clear: both;
-	color: #222;
-	width: 155px;
-	height: 100%;
-	padding: 0 20px 0 5px;
-}
-
-.a-nav-subnav .a-nav-item a:hover
-{
-	color: #333;
-	background: #fff;
-	text-decoration: none;
-}
-
-.a-subnav-wrapper.blog h4
-{
-	float: left;
-	width: 100%;
-	display: inline;
-	position: relative;
-	font-size: 14px;
-}
-
-.a-subnav-wrapper.blog .a-blog-filter-options
-{
-	float: left;
-	width: 100%;
-	clear: both;
-	display: inline;
-	position: relative;
-	line-height: 20px;
-}
-
-.a-subnav-wrapper.media .a-media-filter-options a,
-.a-subnav-wrapper.blog .a-blog-filter-options a
-{
-	float: left;
-	clear: both;
-	display: inline;
-	width: auto;
-	padding: 0 5px;
-}
 
 /* Breadcrumb Navigation
 -------------------------------------*/
-
-#a-breadcrumb-component
-{
-	float: left;
-	width: 100%;
-	font-size: 18px;
-	margin: 0 0 20px 0;
-	list-style: none;
-	padding: 0;
-}
-
-#a-breadcrumb-component li
-{
-	float: left;
-	margin-right: 5px;
-}
-
-
+#a-breadcrumb-component { float: left; width: 100%; font-size: 18px; margin: 0 0 20px 0; list-style: none; padding: 0; }
+#a-breadcrumb-component li { float: left; margin-right: 5px; }
 
 /* Blog Templates
 -------------------------------------*/
-
 .a-blog-item-meta { font-size: 11px; color: #888; margin: 0 0 5px 0; list-style-position: outside; float: left; width: 100%;}
 .a-blog-item-meta li { float: left; padding-right: 5px; margin-right: 5px; border-right: 1px solid #ddd; }
 .a-blog-item-meta li:last-child { border-right: none; }
@@ -366,114 +190,52 @@ margin-bottom: 5px;
 
 /* Events Calendar
 -------------------------------------*/
-
-.a-calendar th.day
-{
-	color: #000;
-	background: rgba(255,255,255,0.25);
-}
+.a-calendar th.day { color: #000; background: rgba(255,255,255,0.25); }
 
 .a-calendar .day a,
-.a-calendar .day span
-{
-	-moz-border-radius: 2px;
-	-webkit-border-radius: 2px;
-	border-radius: 2px;
+.a-calendar .day span { 
+	-moz-border-radius: 2px; 
+	-webkit-border-radius: 2px; 
+	border-radius: 2px; 
 }
 
 .a-calendar .day.today a,
-.a-calendar .day.today span	
-{
-	border: 1px solid #999;
-}
-
-.a-calendar .day.selected a
-{
-	color: #333;
-	background: rgba(255,255,255,0.25);
-}
-
-.a-calendar .day a:hover
-{
-	text-decoration: none;
-	background: #000;
-	color: #fff;
-}
-
-.a-calendar .day.not-current-month
-{
-	opacity: 0.35;
-}
-
-.a-calendar .a-calendar-today:hover
-{
-	background-color: #999;
-}
-
+.a-calendar .day.today span	{ border: 1px solid #999; }
+.a-calendar .day.selected a { color: #333; background: rgba(255,255,255,0.25); }
+.a-calendar .day a:hover { text-decoration: none; background: #000; color: #fff; }
+.a-calendar .day.not-current-month { opacity: 0.35; }
+.a-calendar .a-calendar-today:hover { background-color: #999; }
 .a-calendar .a-calendar-today
 {
+	background-color: #ddd;	
 	-moz-border-radius: 2px;
 	-webkit-border-radius: 2px;
 	border-radius: 2px;
-	background-color: #ddd;	
 }
-
 
 /* ASANDBOX Default Template
 -------------------------------------*/
-.a-default .a-content
-{
-clear: none;
-float: left;
-width: auto;
-}
-
-.a-default .a-area-body
-{
-width: 480px;
-}
-
+.a-default .a-content { clear: none; float: left; width: auto; }
+.a-default .a-area-body { width: 480px; }
 .a-default .a-area-body .a-slot,
-.a-default .a-area-sidebar .a-slot
-{
-margin-bottom: 20px;
-}
-
+.a-default .a-area-sidebar .a-slot { margin-bottom: 20px; }
 
 /* ASANDBOX Home Template
 -------------------------------------*/
-.a-home .a-content
-{
-width: 100%;
-}
-
-.a-home .a-area-body
-{
-width: 720px;
-}
-
+.a-home .a-content { width: 100%; }
+.a-home .a-area-body { width: 720px; }
 .a-home .a-area-body .a-slot,
-.a-home .a-area-sidebar .a-slot
-{
-margin-bottom: 20px;
-}
+.a-home .a-area-sidebar .a-slot { margin-bottom: 20px; }
 
 
-/* ASANDBOX aSlideshow Compact Variant 
+/* ASANDBOX aRichtext Slot
 -------------------------------------*/
-.a-slot.aRichText .a-slot-content p
-{
-	margin-bottom: 10px;
-}
+.a-slot.aRichText .a-slot-content p { margin-bottom: 10px; }
 
 
-/* ASANDBOX aSlideshow Compact Variant 
+/* ASANDBOX aSlideshow Slot -- Compact Variant 
 -------------------------------------*/
-
-.a-slot.aSlideshow.compact
-{
-	margin-top: 0;
-}
+.a-slot.aSlideshow.compact { margin-top: 0; }
 
 .a-slot.aSlideshow.compact ul.a-slideshow-controls
 {
@@ -489,33 +251,11 @@ margin-bottom: 20px;
 	height: auto;
 }
 
-.a-slot.aSlideshow.compact ul.a-slideshow-controls li
-{
-	height: 30px;
-	width: 30px;
-	margin: 0 5px;	
-	background-position: 0 0;
-}
-
-.a-slot.aSlideshow.compact ul.a-slideshow-controls .a-arrow-left
-{
-	background-image: url(/apostrophePlugin/images/a-icon-arrow-left-thin-alt.png);
-	position: absolute;
-	top: 0;
-	right: 30px;
-}
-
-.a-slot.aSlideshow.compact ul.a-slideshow-controls .a-arrow-right
-{
-	background-image: url(/apostrophePlugin/images/a-icon-arrow-right-thin-alt.png);
-	float: right;
-}
-
-.a-slot.aSlideshow.compact ul.a-slideshow-controls .a-arrow-right:hover,
-.a-slot.aSlideshow.compact ul.a-slideshow-controls .a-arrow-left:hover
-{
-background-position: 0 -30px !important;
-}
+.a-slot.aSlideshow.compact ul.a-slideshow-controls li { height: 30px; width: 30px; margin: 0 5px;	background-position: 0 0; }
+.a-slot.aSlideshow.compact ul.a-slideshow-controls .a-arrow-left { background-image: url(/apostrophePlugin/images/a-icon-arrow-left-thin-alt.png); position: absolute; top: 0; right: 30px; }
+.a-slot.aSlideshow.compact ul.a-slideshow-controls .a-arrow-right { background-image: url(/apostrophePlugin/images/a-icon-arrow-right-thin-alt.png); float: right; }
+.a-slot.aSlideshow.compact ul.a-slideshow-controls .a-arrow-left:hover,
+.a-slot.aSlideshow.compact ul.a-slideshow-controls .a-arrow-right:hover { background-position: 0 -30px !important; }
 
 .a-slot.aSlideshow.compact .a-slideshow-title
 {
@@ -531,11 +271,7 @@ background-position: 0 -30px !important;
 	float: none;
 }
 
-.a-slot.aSlideshow.compact .a-slideshow-title span
-{
-	float: left;
-	padding: 8px 70px 8px 8px;	
-}
+.a-slot.aSlideshow.compact .a-slideshow-title span { float: left;	padding: 8px 70px 8px 8px; }
 
 
 
@@ -589,18 +325,12 @@ text-shadow: 0 0 6px rgba(0,0,0,0.80);
 
 /* ASANDBOX Search Results
 ------------------------------------------- */
-
 .a-search-results-container,
 .a-search-results-count,
 .a-search-results,
 .result-title,
 .result-url,
-.result-summary
-{
-	float: left;
-	width: 100%;
-	clear: both;
-}
+.result-summary { float: left; width: 100%; clear: both; }
 
 .a-search-results-count { margin: 10px 0; }
 .result-title { font-size: 14px; margin-bottom: 5px; }
@@ -609,7 +339,6 @@ text-shadow: 0 0 6px rgba(0,0,0,0.80);
 
 /* ASANDBOX Signin Form  http://tld/login
 -------------------------------------*/
-
 .sfguard-signin .a-content { width: 100%; }
 
 .a-signin.page { 
@@ -623,65 +352,21 @@ text-shadow: 0 0 6px rgba(0,0,0,0.80);
 	box-shadow: 0 0 6px rgba(0, 0, 0, 0.10);
 }
 
-.a-signin
-{
-float: left;
-position: relative;
-display: block;
-clear: both;
-margin: 20px auto;
-}
-
-.a-signin form
-{
-}
- 
-.a-signin label
-{
-	display: block;
-	float: none;
-	font-size: 16px;
-	width: auto;
-	margin-bottom: 2px;
-}
-
+.a-signin { float: left; position: relative; display: block; clear: both; margin: 20px auto; }
+.a-signin form { }
+.a-signin label { display: block; float: none; font-size: 16px; width: auto; margin-bottom: 2px; }
 .a-signin .a-form-row input[type="text"],
 .a-signin .a-form-row input[type="password"] { width: 175px; padding: 4px; }
-
 .a-signin .a-form-row {	float: none; width: auto; clear: both; overflow: hidden; display: block; margin: 20px 20px -10px; }
-
 .a-signin .a-form-row.submit { margin: 30px 20px 20px; }
-
 .a-signin .a-forgot-password { display: block; font-size: 11px; margin: -10px 20px 10px; float: left; color: #999; }
-
 .a-signin.forgot .message { width: 440px; }
-
 .a-signin.forgot .help { margin: 5px 0 0;}
+
 
 /* ASANDBOX Staging - Do Not Edit Message
 ------------------------------------------- */
-
-.a-do-not-edit {
-background: #f22;
-padding: 10px;
-}
-
-.a-do-not-edit div
-{
-overflow: hidden;
-margin: 0 auto;
-width: 960px;
-color: #fff;
-font-size: 16px;
-text-align: center;
-text-shadow:	1px 1px 1px rgba(0,0,0,0.45);
-}
-
-.a-do-not-edit a {
-color: #fff;
-text-decoration: underline;
-}
-
-.a-do-not-edit strong {
-font-weight: bold;
-}
+.a-do-not-edit { background: #f22; padding: 10px; }
+.a-do-not-edit div { overflow: hidden; margin: 0 auto; width: 960px; color: #fff; font-size: 16px; text-align: center; text-shadow:	1px 1px 1px rgba(0,0,0,0.45); }
+.a-do-not-edit a { color: #fff; text-decoration: underline; }
+.a-do-not-edit strong { font-weight: bold; }
