a:focus, a:hover { text-decoration: underline; }
git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/trunk@2581 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -43,6 +43,7 @@ br.c { background: none; border: 0; clear: both; display: block; float: none; fo
 
 a { text-decoration: none; }
 
+a:focus,
 a:hover { text-decoration: underline; }
 
 
