--- a/web/css/main.css
+++ b/web/css/main.css
@@ -193,7 +193,7 @@ a:hover { text-decoration: underline; }
 .a-nav-subnav .a-nav-item a { float: left; display: inline; clear: both; color: #222; width: 155px; height: 100%; padding: 0 20px 0 5px; }
 .a-nav-subnav .a-nav-item a:hover { color: #333; background: #fff; text-decoration: none; }
 
-.a-subnav-wrapper h4 { float: left; width: 100%; display: inline; position: relative; font-size: 14px; padding: 0 4px; margin: 0 0 5px 0;}
+.a-subnav-wrapper h4 { float: left; width: 100%; display: inline; position: relative; font-size: 14px; margin: 0 0 5px 0;}
 .a-subnav-wrapper.blog .a-blog-filter-options { float: left; width: 100%; clear: both; display: inline; position: relative; line-height: 20px; }
 .a-subnav-wrapper.blog .a-blog-filter-options a,
 .a-subnav-wrapper.media .a-media-filter-options a { float: left; clear: both; display: inline; width: auto; padding: 0 5px; }
