--- a/web/css/main.css
+++ b/web/css/main.css
@@ -58,6 +58,7 @@ a:hover { text-decoration: underline; }
 
 .a-search.global { width: auto; clear: both; float: right; position: absolute; top: 20px; right: 20px; z-index: 3;}
 .a-search.global form { border: 1px solid #ccc; border: 1px solid rgba(0,0,0,0.1);}
+.a-search.a-search-sidebar form { border: 1px inset #ccc; border: 1px inset rgba(0,0,0,0.1);}
 
 .a-area-logo { float: left; position: relative; z-index: 2; }
 .a-area-logo .a-slot { margin: 0; }
